k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mtgmods-labs
  labels:
    app.kubernetes.io/part-of: mtgmods-platform
    environment: lab
