k8s/license-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: license-service
spec:
  selector:
    app: license-service
  ports:
    - name: http
      port: 80
      targetPort: http
