k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: license-postgres
spec:
  selector:
    app: license-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
