k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: license-service
spec:
  ingressClassName: nginx
  rules:
    - host: mtgmods.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: license-service
                port:
                  name: http
